--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -25,7 +25,7 @@
   }
   .align {
     scroll-margin: 0;
-    padding: 8em 2em;
+    padding: 8em 1.2em;
     max-width: 1280px;
     width: 100%;
     margin: 0 auto;
